fixed blurriness on hover bug

--- a/src/Components/Decorations/style.css
+++ b/src/Components/Decorations/style.css
@@ -3,15 +3,19 @@
     width:170px;
     height:170px;
     border-radius: 50%;
+    box-shadow: 10px 10px 5px  black;
+    z-index:3
 }
 
 .triangle {
     width: 0; 
     height: 0; 
     border-left: 200px solid transparent;
-    border-right: 200px solid transparent;
-    border-bottom: 100px solid #5BFFF3;
-    transform: rotate(90deg);
+    border-bottom: 150px solid #5BFFF3;
+    transform: rotate(40deg);
     position: relative;
-    bottom: 90px;
+    top: 150px;
+    right:-30px;
+    z-index:1;
+    box-shadow: 10px 8px 5px  black;
   }
